--- a/views/partial-cats.html
+++ b/views/partial-cats.html
@@ -1,11 +1,11 @@
 <ul>
     ${data.map(myCats => `
         <li><b>Name:</b> ${myCats.name}</li>
-        <li>Nickname: ${myCats.nickname}</li>
-        <li>Age: ${myCats.age}</li>
-        <li>Favorite Toy: ${myCats.favorite_toy}</li>
-        <li>Gender: ${myCats.gender}</li>
-        <li>Color and Pattern: ${myCats.color}</li>
-        <li>Is a good kitty: ${myCats.good_kitty}</li>
+        <li><b>Nickname:</b> ${myCats.nickname}</li>
+        <li><b>Age:</b> ${myCats.age}</li>
+        <li><b>Favorite Toy:</b> ${myCats.favorite_toy}</li>
+        <li><b>Gender:</b> ${myCats.gender}</li>
+        <li><b>Color and Pattern:</b> ${myCats.color}</li>
+        <li><b>Is a good kitty:</b> ${myCats.good_kitty}</li>
     <br />`).join('')}
 </ul>
